--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,17 +45,20 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Amunition\Projectile.cs" />
-     <Compile Include="Assets\Scripts\Enemy\Enemy1.cs" />
+     <Compile Include="Assets\Scripts\Enemy.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Scripts\Enemy1.cs" />
      <Compile Include="Assets\Scripts\Game\BadSpawner.cs" />
-     <Compile Include="Assets\Scripts\Player.cs" />
-     <Compile Include="Assets\Scripts\ProjectileScript.cs" />
-     <Compile Include="Assets\Scripts\Ship\Engine.cs" />
-     <Compile Include="Assets\Scripts\Ship\Enums.cs" />
-     <Compile Include="Assets\Scripts\Ship\Hull.cs" />
-     <Compile Include="Assets\Scripts\Ship\Scripts\ShipCollision.cs" />
-     <Compile Include="Assets\Scripts\Ship\Ship.cs" />
-     <Compile Include="Assets\Scripts\Ship\Weapon.cs" />
-     <Compile Include="Assets\Scripts\myCamera.cs" />
+     <Compile Include="Assets\Scripts\Game\Player.cs" />
+     <Compile Include="Assets\Scripts\Game\myCamera.cs" />
+     <Compile Include="Assets\Scripts\Helpers\Enums.cs" />
+     <Compile Include="Assets\Scripts\PowerUp.cs" />
+     <Compile Include="Assets\Scripts\PowerUps\Exp.cs" />
+     <Compile Include="Assets\Scripts\Projectiles\ProjectileScript.cs" />
+     <Compile Include="Assets\Scripts\Ship.cs" />
+     <Compile Include="Assets\Scripts\ShipParts\Engine.cs" />
+     <Compile Include="Assets\Scripts\ShipParts\Hull.cs" />
+     <Compile Include="Assets\Scripts\ShipParts\Scripts\ShipCollision.cs" />
+     <Compile Include="Assets\Scripts\ShipParts\Weapon.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
